# lambdas/order-service/handlers/postCheckoutSessionHandler.ts
@@ -11,16 +11,31 @@ export const postCheckoutSessionHandler = async (
     service: OrderService
 ): Promise<APIGatewayProxyResult> => {
     try {
-        const payload = JSON.parse(event.body ?? '{}');
-        const validatedCheckoutSessionInput = CheckoutInputValidationSchema.parse(payload);
-        console.log(payload);
-        const checkoutSessionEntity = mapper.map<CheckoutSessionInputDto, CheckoutSession>(
-            validatedCheckoutSessionInput,
-            POJO.CHECKOUT_INPUT_DTO,
-            POJO.CHECKOUT
-        );
+        const { pickupTime, deliveryAddress } = JSON.parse(event.body ?? '{}');
+        console.log(pickupTime, deliveryAddress);
+        const checkoutSessionId = event.pathParameters?.id;
+        console.log(checkoutSessionId);
+        // const validatedCheckoutSessionInput = CheckoutInputValidationSchema.parse(payload);
+        // console.log(payload);
+        // const checkoutSessionEntity = mapper.map<CheckoutSessionInputDto, CheckoutSession>(
+        //     validatedCheckoutSessionInput,
+        //     POJO.CHECKOUT_INPUT_DTO,
+        //     POJO.CHECKOUT
+        // );
+        // await service.updateCheckoutSession({
+        //     id: checkoutSessionId!,
+        //     pickupTime,
+        //     deliveryAddress
+        // });
+        const customerId = '4639dcd4-7615-432f-b3c4-20091fe9e759';
 
-        const checkoutSession = await service.create(checkoutSessionEntity);
+        const checkoutSession = await service.getCheckoutSessionById(checkoutSessionId!);
+
+        console.log(checkoutSession);
+
+        if (checkoutSession.customerId !== customerId) {
+            throw new Error('Unauthorized');
+        }
 
         const deliveryPricingRequest = await fetch(`${process.env.SERVICES_URL}/pricing-requests`, {
             method: 'POST',
@@ -28,24 +43,20 @@ export const postCheckoutSessionHandler = async (
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                deliveryAddress: checkoutSession.deliveryAddress,
-
-                pickupAddress: checkoutSession.pickupAddress
+                deliveryAddress,
+                pickupAddress: checkoutSession.pickupAddress,
+                items: [
+                    {
+                        id: 'fake listing id',
+                        weight: 100,
+                        height: 100,
+                        width: 100,
+                        length: 100
+                    }
+                ]
             })
         });
-        
 
-        const deliveryPricingRequest = await fetch(`${process.env.SERVICES_URL}/pricing-requests`, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-                deliveryAddress: checkoutSession.deliveryAddress,
-
-                pickupAddress: checkoutSession.pickupAddress
-            })
-        });
         console.log(deliveryPricingRequest);
         const dpr = await deliveryPricingRequest.json();
         console.log(dpr);
